fix tag styling on safari mobile

--- a/sass/minima/_base.scss
+++ b/sass/minima/_base.scss
@@ -334,11 +334,16 @@ a.zola-anchor {
 }
 
 /* tags */
-div.all-tags > ul {
+nav.all-tags > ul {
   margin-left: inherit;
   display: inline;
-  li { display: inline list-item }
-  li:first-child { display: inline }
+  li {
+    display: inline;
+  }
+  li:not(:first-child)::before {
+    content: "• ";
+  }
+  /* li:first-child { display: inline } */
 }
 span.post-meta > a {
   color: $grey-color;
